# QML_Serial_Oscilloscope

./: .gitignore  CMakeLists.txt  Graph.qml  Interface.js  Main.qml  README.md  assets.qrc  main.cpp  model.cpp  model.h
header/: model.h
src/: main.cpp  model.cpp
src/qml/: CustomComboBox.qml  CustomDial.qml  CustomLineSeries.qml  CustomMouseArea.qml  CustomSpinBox.qml  CustomTextEdit.qml  CustomTextField.qml  ErrorTerminal.qml  Graph.qml  GraphControls.qml  LabelPointCoordinates.qml  LineSelectorElement.qml  Main.qml  SerialIOInterface.qml  SerialPortOption.qml  scripts.js
